--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,5 +5,6 @@
          version="3.1">
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
+        <welcome-file>home.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
